--- a/engine/Game.vcxproj
+++ b/engine/Game.vcxproj
@@ -29,6 +29,7 @@
     <ClInclude Include="Source\GameMode.h" />
     <ClInclude Include="Source\GameTimers.h" />
     <ClInclude Include="Source\HUD.h" />
+    <ClInclude Include="Source\IcoGenerator.h" />
     <ClInclude Include="Source\InputComponent.h" />
     <ClInclude Include="Source\InputManager.h" />
     <ClInclude Include="Source\Math.h" />
@@ -68,6 +69,7 @@
     <ClCompile Include="Source\GameMode.cpp" />
     <ClCompile Include="Source\GameTimers.cpp" />
     <ClCompile Include="Source\HUD.cpp" />
+    <ClCompile Include="Source\IcoGenerator.cpp" />
     <ClCompile Include="Source\InputComponent.cpp" />
     <ClCompile Include="Source\InputManager.cpp" />
     <ClCompile Include="Source\Main.cpp" />
