--- a/engine/Game.vcxproj.filters
+++ b/engine/Game.vcxproj.filters
@@ -131,6 +131,9 @@
     <ClInclude Include="Source\IcoGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\ShaderCache.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Game.cpp">
@@ -245,6 +248,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\IcoGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\ShaderCache.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
