--- a/engine/Game.vcxproj.filters
+++ b/engine/Game.vcxproj.filters
@@ -131,7 +131,7 @@
     <ClInclude Include="Source\IcoGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\ShaderCache.h">
+    <ClInclude Include="Source\PerlinNoise.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -250,7 +250,7 @@
     <ClCompile Include="Source\IcoGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\ShaderCache.cpp">
+    <ClCompile Include="Source\PerlinNoise.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
