--- a/engine/Game.vcxproj
+++ b/engine/Game.vcxproj
@@ -21,6 +21,7 @@
     <ClInclude Include="Source\CollisionComponent.h" />
     <ClInclude Include="Source\Component.h" />
     <ClInclude Include="Source\Delegate.h" />
+    <ClInclude Include="Source\Foliage.h" />
     <ClInclude Include="Source\Font.h" />
     <ClInclude Include="Source\FontComponent.h" />
     <ClInclude Include="Source\FrameTimer.h" />
@@ -41,15 +42,19 @@
     <ClInclude Include="Source\PerlinNoise.h" />
     <ClInclude Include="Source\PhysWorld.h" />
     <ClInclude Include="Source\Planet.h" />
+    <ClInclude Include="Source\PlanetRinged.h" />
+    <ClInclude Include="Source\PlanetTerra.h" />
     <ClInclude Include="Source\ProceduralMesh.h" />
     <ClInclude Include="Source\Random.h" />
     <ClInclude Include="Source\Renderer.h" />
+    <ClInclude Include="Source\Rock.h" />
     <ClInclude Include="Source\Shader.h" />
     <ClInclude Include="Source\Ship.h" />
     <ClInclude Include="Source\Sound.h" />
     <ClInclude Include="Source\SphereCollision.h" />
     <ClInclude Include="Source\SpriteComponent.h" />
     <ClInclude Include="Source\Texture.h" />
+    <ClInclude Include="Source\Tree.h" />
     <ClInclude Include="Source\VertexArray.h" />
     <ClInclude Include="Source\World.h" />
   </ItemGroup>
@@ -64,6 +69,7 @@
     <ClCompile Include="Source\CollisionComponent.cpp" />
     <ClCompile Include="Source\Component.cpp" />
     <ClCompile Include="Source\DrawComponent.cpp" />
+    <ClCompile Include="Source\Foliage.cpp" />
     <ClCompile Include="Source\Font.cpp" />
     <ClCompile Include="Source\FontComponent.cpp" />
     <ClCompile Include="Source\FrameTimer.cpp" />
@@ -83,15 +89,19 @@
     <ClCompile Include="Source\PerlinNoise.cpp" />
     <ClCompile Include="Source\PhysWorld.cpp" />
     <ClCompile Include="Source\Planet.cpp" />
+    <ClCompile Include="Source\PlanetRinged.cpp" />
+    <ClCompile Include="Source\PlanetTerra.cpp" />
     <ClCompile Include="Source\ProceduralMesh.cpp" />
     <ClCompile Include="Source\Random.cpp" />
     <ClCompile Include="Source\Renderer.cpp" />
+    <ClCompile Include="Source\Rock.cpp" />
     <ClCompile Include="Source\Shader.cpp" />
     <ClCompile Include="Source\Ship.cpp" />
     <ClCompile Include="Source\Sound.cpp" />
     <ClCompile Include="Source\SphereCollision.cpp" />
     <ClCompile Include="Source\SpriteComponent.cpp" />
     <ClCompile Include="Source\Texture.cpp" />
+    <ClCompile Include="Source\Tree.cpp" />
     <ClCompile Include="Source\VertexArray.cpp" />
     <ClCompile Include="Source\World.cpp" />
   </ItemGroup>
